Fix image wrap size in blog and blog_details templates in blog app.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -501,6 +501,29 @@ a.category-badge > span.badge:hover {
     border-radius: 0;
 }
 
+/* ----- Blog page ------- */
+
+.wrap_img {
+	height:50vh;
+	min-height: 30vh;
+	object-fit: cover;
+	width: 100%;
+}
+
+/* ----- Blog detail page ------- */
+
+figure .wrap_img {
+	display: block;
+	max-height: 100vh;
+	max-width: 80vh;
+}
+
+.blog_img {
+	height: 100%;
+	object-fit: cover;
+	width: 100%;
+}
+
 /* ----- Media Queries ------- */
 
 /* Slightly larger container on xl screens */
